--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,8 +4,8 @@ compatibility_date = "2023-08-21"
 node_compat = true
 
 [vars]
-#TOKEN_USER = "dXNlcjp1c2Vy"
-#TOKEN_ADMIN = "YWRtaW46bmltZGE="
+# TOKEN_USER = "dXNlcjp1c2Vy"
+TOKEN_ADMIN = "YWRtaW46bmltZGE="
 
 [[kv_namespaces]]
 binding = "PROJECTS"
